02-orquestacion/v5-2024/dia5/ing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
  labels:
    name: counter
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  
  ingressClassName: nginx
  rules:
  - host: 127-0-0-1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: counter
            port: 
              number: 80
  tls:
    - hosts:
        - 127-0-0-1.nip.io
      secretName: mycert
